@@ -1,3 +1,5 @@
+DIST psi-autoreply-0.3.0_pre3076.tar.xz 8380 RMD160 796ee15dfa128eeecc77d64147e4d98f3422f0d3 SHA1 932cf4e4fd92f59cc30ca32f8e4cc2a45ef133bb SHA256 ff7a7d57d322d5026123b3e6130d86ada8e71572aa9e67bda6968d248eb8006a
+EBUILD psi-autoreply-0.3.0_pre3076.ebuild 221 RMD160 b9f5288cee00b553c3a7b80cf45952e763a3ebce SHA1 2cb0193f894ea58bc43eac53ef7ba1c4d6231d70 SHA256 4484d0b08c97bdd501199129fe601e50d5d223df326d48bb030e23471179b416
 EBUILD psi-autoreply-9999.ebuild 212 RMD160 86740141765ff7454f1d60e207134c9e46018ed8 SHA1 2cc143c97858866855d58dc25f0c80c7a02ba8a5 SHA256 fe3fda9bab756e11a89bd99cc8646678f8114a9ce5594297f0a140707b471bd5
-MISC ChangeLog 201 RMD160 c51cf9ea1663642333c04b24af7e267d45b80c3a SHA1 20e290bf007a0e1ded487318246def3cd4273421 SHA256 475cee0ad7a7aae73f9183196ae5140cc3446a48e35e4b551359a5e119076170
+MISC ChangeLog 303 RMD160 aecddb14904ad3b369e7fc88da453ce8ad034348 SHA1 c1242bc97b46ce376e639db09e682965ddad5414 SHA256 6eacc8489c006863dc853fec24c56e29cf9a5119a3a5a859b3e8871ebecc2d2d
 MISC metadata.xml 324 RMD160 c4b00137377eb7db15aa57fff5454ba11161832e SHA1 2d166ebbfffff8b5a7bb79f1a04778963e3a50ff SHA256 1e6031c4f796134e69f79f4a13893604c3eeb35c04002f891e1af2757c9d15ef
